# archaeo

./: .gitignore  Cargo.toml  LICENSE  README.md
archaeo_macros/: Cargo.toml
archaeo_macros/src/: lib.rs
sample-outputs/: dummy-extended.csv  dummy-extended.json  dummy.c.csv  dummy.c.json  dummy.csv  dummy.json  test-extended.csv  test-extended.json  test.c.csv  test.c.json  test.csv  test.json
src/: cli.rs  errors.rs  main.rs
src/commands/: source.rs
test-data/: test.c
test-data/project_1/: dummy.cpp
