[package]
name = "archaeo"
version = "0.3.2"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "2.0.3"
rust-code-analysis = "=0.0.24"
serde_json = "1.0.133"
csv = "1.3.1"
serde = { version = "1.0.215", features = ["derive"] }
walkdir = "2.5.0"
rayon = "1.10.0"
archaeo_macros = { path = "./archaeo_macros" }

#https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
opt-level = 3     # Speed
rpath = true
